--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-style {
+    @apply px-2 py-1 rounded-md text-white cursor-pointer;
+  }
+}
